--- a/SafariGo.Api/Pages/ResetPassword.cshtml
+++ b/SafariGo.Api/Pages/ResetPassword.cshtml
@@ -44,7 +44,7 @@
            left:50%;
            transform:translate(-50%,-50%);
            padding:35px 25px;
-            border: 1px solid cornflowerblue;
+            border: 1px solid #ddd;
             border-radius:5px;
         }
         input{
@@ -52,13 +52,13 @@
             border: 1px solid lightgray;
             border-radius:5px;
             padding:10px 15px;
-            outline-color:cornflowerblue;
+            outline-color: #7d8b2e;
         }
         .field{
             margin-bottom:15px;
         }
         .btn{
-            background-color: cornflowerblue;
+            background-color: #7d8b2e;
             border:none;
             border-radius:5px;
             padding:15px 10px;
@@ -69,19 +69,10 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <nav class="container">
-            <a style="font-weight:bold" href="#" class="logo">Safari Go</a>
-            <ul class="list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-
-            </ul>
-        </nav>
-    </div>
+    
     <div class="form">
         <div class="container">
+            <img style="width:220px;height:220px;border-radius:5px; margin-bottom:20px" src="https://res.cloudinary.com/see-jordan/image/upload/v1683900521/logo3_cleanup_etuxec.png" />
             <h2 style="margin-bottom:20px">Reset Password</h2>
             <form action="api/Authentication/resetPassword" method="post">
                 <div class="field">
