--- a/SafariGo.Api/wwwroot/Template/EmailTemplate.html
+++ b/SafariGo.Api/wwwroot/Template/EmailTemplate.html
@@ -103,7 +103,7 @@
           <tr>
             <td align="center" valign="top" style="padding: 36px 24px;">
               <a href="https://www.blogdesire.com" target="_blank" style="display: inline-block;">
-                <img src="https://www.blogdesire.com/wp-content/uploads/2019/07/blogdesire-1.png" alt="Logo" border="0" width="280" style="display: block; width: 280; max-width: 280; min-width: 280px;">
+                <img src="https://res.cloudinary.com/see-jordan/image/upload/v1683900521/logo3_cleanup_etuxec.png" alt="Logo" border="0" width="280" style="display: block; width: 280; max-width: 280; min-width: 280px;">
               </a>
             </td>
           </tr>
@@ -181,7 +181,7 @@
           <!-- start copy -->
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-              <p style="margin: 0;">BEST REGARDS, Safari Go</p>
+              <p style="margin: 0;">BEST REGARDS, See Jordan</p>
             </td>
           </tr>
           <!-- end copy -->
