--- a/SafariGo.Api/Pages/ResetPassword.cshtml
+++ b/SafariGo.Api/Pages/ResetPassword.cshtml
@@ -13,86 +13,149 @@
             box-sizing: border-box;
         }
 
-        a {
-            text-decoration: none;
-            color: #fff;
+
+        body {
         }
 
-        .navbar {
-            background: black;
-            padding: 15px;
-        }
 
         .container {
-            padding: 0 20px;
-          
-        }
-        nav{
-            display: flex;
+            margin: 25px;
         }
 
-        .list {
-            flex: 2;
-            display: flex;
-            justify-content: flex-end;
-            list-style: none;
-            gap: 10px
-        }
-        .form{
-           position:absolute;
-           top:50%;
-           left:50%;
-           transform:translate(-50%,-50%);
-           padding:35px 25px;
+
+
+        .form {
+            padding: 35px 25px;
             border: 1px solid #ddd;
-            border-radius:5px;
+            border-radius: 5px;
+            width: 100%;
+            margin: 10px auto;
         }
-        input{
-            display:block;
+
+        input {
+            display: block;
             border: 1px solid lightgray;
-            border-radius:5px;
-            padding:10px 15px;
+            border-radius: 5px;
+            padding: 10px 15px;
             outline-color: #7d8b2e;
+            width: 100%
         }
-        .field{
-            margin-bottom:15px;
+
+        .field {
+            margin-bottom: 25px;
         }
-        .btn{
+
+        .btn {
             background-color: #7d8b2e;
-            border:none;
-            border-radius:5px;
-            padding:15px 10px;
-            width:100%;
-            color:#fff;
-            cursor:pointer;
+            border: none;
+            border-radius: 5px;
+            padding: 15px 10px;
+            width: 100%;
+            color: #fff;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    
-    <div class="form">
-        <div class="container">
-            <img style="width:220px;height:220px;border-radius:5px; margin-bottom:20px" src="https://res.cloudinary.com/see-jordan/image/upload/v1683900521/logo3_cleanup_etuxec.png" />
-            <h2 style="margin-bottom:20px">Reset Password</h2>
-            <form action="api/Authentication/resetPassword" method="post">
-                <div class="field">
-                    <label style="margin-bottom:10px ;display:block">@Request.Query["email"]</label>
-                    <input type="hidden"  name="Email" value="@Request.Query["email"]" />
-                    <input type="hidden"  name="Token" value="@Request.Query["token"]" />
-                </div>
-                <div class="field">
-                    <label style="margin-bottom:10px ;display:block">New Password</label>
-                    <input type="password" placeholder="New Password" name="Password" />
-                </div>
-                <div class="field">
-                    <label style="margin-bottom:10px ;display:block">Confirm Password</label>
-                    <input type="password" placeholder="Confirm Password" name="ConfirmPassword" />
-                </div>
-                <div class="field">
-                    <button class="btn" type="submit">Reset</button>
-                </div>
-            </form>
+
+    <div class="container">
+        @* <div class="form">
+
+        <h1 style="margin-bottom:25px">Reset Password</h1>
+        <form id="resetPasswordForm" action="api/Authentication/resetPassword" method="post">
+        <div class="field">
+        <label style="margin-bottom:10px ;display:block">@Request.Query["email"]</label>
+        <input type="hidden" name="Email" value="@Request.Query["email"]" />
+        <input type="hidden" name="Token" value="@Request.Query["token"]" />
         </div>
+        <div class="field">
+        <label style="margin-bottom:10px ;display:block">New Password</label>
+        <input id="pass" type="password" placeholder="New Password" name="Password" />
+        <p id="errorPass" style="color:red; display:none">The Password field is required </p>
+        </div>
+        <div class="field">
+        <label style="margin-bottom:10px ;display:block">Confirm Password</label>
+        <input id="confirmPass" type="password" placeholder="Confirm Password" name="ConfirmPassword" />
+        </div>
+        <div class="field">
+        <button id="btn" class="btn" type="submit">Reset</button>
+        </div>
+        <p id="errorMsg" style="color:red; display:none">Passwords do not match</p>
+        </form>
+        </div>*@
+
+        <h1>Reset Password</h1>
+        <form id="resetForm" action="api/Authentication/resetPassword" method="post">
+            <div class="field">
+                <label style="margin-bottom:10px ;display:block">@Request.Query["email"]</label>
+                <input type="hidden" name="Email" value="@Request.Query["email"]" />
+                <input type="hidden" name="Token" value="@Request.Query["token"]" />
+            </div>
+            <div class="field">
+                <label style="margin-bottom:10px ;display:block">New Password</label>
+                <input id="pass" type="password" placeholder="New Password" name="Password" />
+                <p id="errorPass" style="display:none; margin-top:5px; color:red;">The Password field is required</p>
+
+            </div>
+            <div class="field">
+                <label style="margin-bottom:10px ;display:block">Confirm Password</label>
+                <input id="confirmPass" type="password" placeholder="Confirm Password" name="ConfirmPassword" />
+                <p id="errorConfirm" style="display:none;margin-top:5px; color:red;">The Confirm Password field is required</p>
+            </div>
+            <div class="field">
+                <button id="btn" class="btn" type="submit">Reset</button>
+            </div>
+            <p id="errorMatch" style="display:none; color:red;">Passwords do not match</p>
+            <p id="errorMsg" style="display:none ;margin-top:5px; color:red;">The password must contain at least 6 numbers || At least one uppercase letter || At least one lowercase letter || Special character at least one</p>
+        </form>
+
+
+
     </div>
+
+    <script>
+        const resetForm = document.getElementById('resetForm');
+        const pass = document.getElementById('pass');
+        const confirmPass = document.getElementById('confirmPass');
+        const errorMsg = document.getElementById('errorMsg');
+        const errorMatch = document.getElementById('errorMatch');
+        const errorPass = document.getElementById('errorPass');
+        const errorConfirm = document.getElementById('errorConfirm');
+
+        resetForm.addEventListener('submit', (e) => {
+            errorPass.style.display = 'none';
+            errorConfirm.style.display = 'none';
+            errorMsg.style.display = 'none';
+            // Check if password and confirm password match
+
+            // Check if password and confirm password are not empty
+            if (pass.value === '') {
+                e.preventDefault();
+                errorPass.style.display = 'block';
+            }
+            if (confirmPass.value === '') {
+                e.preventDefault();
+                errorConfirm.style.display = 'block';
+
+            }
+            if (pass.value !== confirmPass.value) {
+                e.preventDefault();
+                errorMatch.style.display = 'block';
+                return;
+            }
+
+            // Check if password meets requirements
+            const regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@@$!%*?&])[A-Za-z\d@@$!%*?&]{6,}$/;
+            if (!regex.test(pass.value)) {
+                e.preventDefault();
+                errorMsg.style.display = 'block';
+                return;
+            }
+
+            // All checks passed, submit the form
+
+        });
+    </script>
 </body>
 </html>
+
